# leptos-repro

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs
