[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# leptos-use = { version = "0.14.0-beta1" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
log.workspace = true
serde = { version = "1.0.213", features = ["derive"] }
service = { path = "../service", optional = true }
sqlx = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:service",
  "dep:axum",
  "dep:axum-extra",
  # "leptos-use/ssr",
  # "leptos-use/axum",
]
