[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
axum = { workspace = true, features = ["macros"] }
simple_logger.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
service = { path = "../service" }
sqlx.workspace = true
dotenv = "0.15.0"

tracing = "0.1.40"
axum-extra.workspace = true
